people-panel: Make sure that the meego people don't get squashed
The meego people asset displayed in the placeholder tile gets squashed
if the system tray is active. Fixes BMC#24145

--- a/panels/people/data/theme/panel.css
+++ b/panels/people/data/theme/panel.css
@@ -74,7 +74,7 @@ MnbPeoplePanel
 
 *#people-pane-no-people-tile
 {
-  padding: 28 25 90 4;
+  padding: 28 25 4 4;
 }
 
 *#people-no-people-message-bin,
